fix alignment

--- a/packages/@adobe/spectrum-css-temp/components/steplist/index.css
+++ b/packages/@adobe/spectrum-css-temp/components/steplist/index.css
@@ -218,7 +218,8 @@ governing permissions and limitations under the License.
 
     padding-inline-start: calc(var(--spectrum-steplist-chevron-gap) - var(--spectrum-steplist-marker-label-gap));
     &::before {
-      content: ' ';
+      content: "*";
+      content: "*" / "";
       width: 0;
       visibility: hidden;
     }
@@ -239,7 +240,8 @@ governing permissions and limitations under the License.
     display: flex;
     align-items: center;
     &::before {
-      content: ' ';
+      content: "*";
+      content: "*" / "";
       width: 0;
       visibility: hidden;
     }
@@ -281,7 +283,8 @@ governing permissions and limitations under the License.
     display: flex;
     align-items: center;
     &::before {
-      content: ' ';
+      content: "*";
+      content: "*" / "";
       width: 0;
       visibility: hidden;
     }
